--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^5.7.2",
     "lightweight-charts": "^3.8.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
